[tmux] fix base-window setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,5 +16,5 @@ bind / command-prompt "split-window -h 'man %%'"
 # pgup pgdown scroll
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# start windows at 1
-set base-index 1
+# start windows at 1 - easy window selection
+set -g base-index 1
