[tmux] set vi mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,10 @@ unbind C-b
 set -g prefix C-a
 bind a send-prefix
 
+# Explicitly set vi mode
+set -g mode-keys vi
+set -g status-keys vi
+
 # Increase the scrollback
 set -g history-limit 10000
 
