--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Brian Hassinger
-	email = brian.a.hassinger@gmail.com
+	name = Jonathan Senecal
+	email = jsenecal@zerofail.com
 [core]
 	editor = vim
 [alias]
